added discount container section

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@
 .banner-info {
     color: #fff;
     font-size: 72px;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 95px;
     font-family: "Merriweather", serif;
 }
@@ -94,7 +94,7 @@ main {
 .celebration-info .celebration-title {
     color: #fff;
     font-size: 64px;
-    font-weight: 700;
+    font-weight: 900;
     font-family: "Merriweather", serif;
     letter-spacing: 7px;
     margin-bottom: 24px;
@@ -185,7 +185,7 @@ main {
 .offer-release {
     color: #070211;
     font-size: 48px;
-    font-weight: 700;
+    font-weight: 900;
     font-family: "Merriweather", serif;
      margin-bottom: 22px;
     margin-top: 16px;
@@ -225,6 +225,92 @@ main {
     border-radius: 50%;
     padding: 25px;
   }
+
+  .discount-container {
+    text-align: center;
+    margin: 120px;
+    /* position: relative; */
+  }
+
+  .discount-container-title {
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+  }
+
+  .discount-container span {
+    font-size: 72px;
+    color: #FF0000;
+    font-weight: 900;
+    font-family: "Merriweather", serif;
+  }
+  .discount-offer {
+    color: #070211;
+    font-size: 72px;
+    font-weight: 900;
+    font-family: "Merriweather", serif;
+    margin-top: 16px;
+    margin-bottom: 28px;
+  }
+
+  .discount-description {
+    width: 860px;
+    margin: 0 auto;
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: center;
+  }
+
+  .big-offer {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 24.34px;
+    font-weight: 700;
+    line-height: 27px;
+    padding-top: 76px;
+  }
+  .discount-tag span {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 73.02px;
+    font-weight: 900;
+    line-height: 29px;
+  }
+
+  .discount-tag {
+    width: 207px;
+    height: 207px;
+    border-radius: 50%;
+    background-color: #FF0000;
+    text-align: center;
+    rotate: -34.21deg;
+    margin-top: 141px;
+    margin-bottom: 50px;
+    margin-left: 74%;
+  }
+
+  .red-box {
+    width: 1320px;
+    height: 229px;
+    background-color: #FF0000;
+    margin: 0 auto;
+    border-radius: 16px 0 16px 16px;
+    position: relative;
+    margin-top: 219px;
+  }
+
+  .discount-image img {
+    position: absolute;
+    z-index: 1;
+    right: 41%;
+    top: 460%;
+  }
+
 
 
 
