added edited section

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,7 @@ main {
     border-radius: 8px;
     color: #fff;
     margin-top: 56px;
+    cursor: pointer;
 }
 
 .offer-container {
@@ -355,6 +356,7 @@ main {
 
   .portfolio-images {
     margin-left: 171px;
+    cursor: pointer;
   }
 
   .portfolio-images img {
@@ -439,6 +441,7 @@ main {
     font-weight: 600;
     line-height: 24px;
     text-transform: capitalize;
+    cursor: pointer;
   }
 
   /* footer styles */
@@ -479,6 +482,10 @@ main {
 
 .phone-address {
   margin-right: 130px;
+}
+
+.social-icons {
+  cursor: pointer;
 }
 
 .social-icons img {
